--- a/FrontDemo/src/index.html
+++ b/FrontDemo/src/index.html
@@ -2,10 +2,11 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>FrontDemo</title>
+  <title>AI Agent Platform</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <meta name="description" content="Create and manage AI agents with our intuitive platform">
 </head>
 <body>
   <app-root></app-root>
